// The main simulation protocol.

syntax = "proto3";
package simulation.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum ErrorCode {
  // Generic errors.
  INTERNAL_ERROR = 0;
  MISSING_ARGUMENT = 1;
  INVALID_TIME = 2;
  INVALID_PERIOD = 3;
  INVALID_DEADLINE = 4;
  INVALID_MESSAGE = 5;
  INVALID_KEY = 6;
  INVALID_TIMEOUT = 7;

  // Bench initialization errors.
  INITIALIZER_PANIC = 30;
  DUPLICATE_EVENT_NAME = 60;
  DUPLICATE_QUERY_NAME = 61;
  DUPLICATE_SINK_NAME = 62;
  DESERIALIZATION_ERROR = 63;
  
  // Simulation runtime error.
  SIMULATION_NOT_STARTED = 31;
  SIMULATION_HALTED = 32;
  SIMULATION_TERMINATED = 33;
  SIMULATION_DEADLOCK = 34;
  SIMULATION_MESSAGE_LOSS = 35;
  SIMULATION_NO_RECIPIENT = 36;
  SIMULATION_PANIC = 37;
  SIMULATION_TIMEOUT = 38;
  SIMULATION_OUT_OF_SYNC = 39;
  SIMULATION_BAD_QUERY = 40;
  SIMULATION_TIME_OUT_OF_RANGE = 41;
  
  // Monitoring errors.
  EVENT_SOURCE_NOT_FOUND = 50;
  QUERY_SOURCE_NOT_FOUND = 51;
  SINK_NOT_FOUND = 52;
  SINK_TERMINATED = 53;
  SINK_READ_RACE = 54;
  SINK_READ_TIMEOUT = 55;
  INVALID_EVENT_TYPE = 56;
  INVALID_QUERY_TYPE = 57;

  // Serialization error.
  SAVE_ERROR = 70;
  RESTORE_ERROR = 71;
}

message Error {
  ErrorCode code = 1;
  string message = 2;
}

message EventKey {
  uint64 subkey1 = 1;
  uint64 subkey2 = 2;
}

message InitRequest {
  google.protobuf.Timestamp time = 1;
  bytes cfg = 2;
}
message InitReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 1;
    Error error = 100;
  }
}

message RestoreRequest {
  bytes state = 1;
  optional bytes cfg = 2;
}
message RestoreReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 1;
    Error error = 100;
  }
}

message TerminateRequest { }
message TerminateReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 1;
    Error error = 100;
  }
}

message HaltRequest {}
message HaltReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 1;
    Error error = 100;
  }
}

message SaveRequest {}
message SaveReply {
  oneof result { // Always returns exactly 1 variant.
    bytes state = 1;
    Error error = 100;
  }
}

message TimeRequest {}
message TimeReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Timestamp time = 1;
    Error error = 100;
  }
}

message StepRequest {}
message StepReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Timestamp time = 1;
    Error error = 100;
  }
}

message StepUntilRequest {
  oneof deadline { // Always returns exactly 1 variant.
    google.protobuf.Timestamp time = 1;
    google.protobuf.Duration duration = 2;
  }
}
message StepUntilReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Timestamp time = 1;
    Error error = 100;
  }
}

message StepUnboundedRequest {}
message StepUnboundedReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Timestamp time = 1;
    Error error = 100;
  }
}

message ListEventSourcesRequest {}
message ListEventSourcesReply {
  // This field is hoisted because protobuf3 does not support `repeated` within
  // a `oneof`. It is Always empty if an error is returned
  repeated string source_names = 1;
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 10;
    Error error = 100;
  }
}

message GetEventSourceSchemasRequest {
  repeated string source_names = 1;
}
message GetEventSourceSchemasReply {
  // This field is hoisted because protobuf3 does not support `map` within
  // a `oneof`. It is Always empty if an error is returned
  map<string, string> schemas = 1;
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 10;
    Error error = 100;
  }
}

message ListQuerySourcesRequest {}
message ListQuerySourcesReply {
  // This field is hoisted because protobuf3 does not support `repeated` within
  // a `oneof`. It is Always empty if an error is returned
  repeated string source_names = 1;
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 10;
    Error error = 100;
  }
}

message QuerySchema {
  string request = 1;
  string reply = 2;
}

message GetQuerySourceSchemasRequest {
  repeated string source_names = 1;
}
message GetQuerySourceSchemasReply {
  // This field is hoisted because protobuf3 does not support `map` within
  // a `oneof`. It is Always empty if an error is returned
  map<string, QuerySchema> schemas = 1;
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 10;
    Error error = 100;
  }
}

message ListEventSinksRequest {}
message ListEventSinksReply {
  // This field is hoisted because protobuf3 does not support `repeated` within
  // a `oneof`. It is Always empty if an error is returned
  repeated string sink_names = 1;
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 10;
    Error error = 100;
  }
}

message GetEventSinkSchemasRequest {
  repeated string sink_names = 1;
}
message GetEventSinkSchemasReply {
  // This field is hoisted because protobuf3 does not support `map` within
  // a `oneof`. It is Always empty if an error is returned
  map<string, string> schemas = 1;
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 10;
    Error error = 100;
  }
}

message ScheduleEventRequest {
  oneof deadline { // Expects exactly 1 variant.
    google.protobuf.Timestamp time = 1;
    google.protobuf.Duration duration = 2;
  }
  string source_name = 3;
  bytes event = 4;
  google.protobuf.Duration period = 5;
  bool with_key = 6;
}
message ScheduleEventReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 1;
    EventKey key = 2;
    Error error = 100;
  }
}

message CancelEventRequest { EventKey key = 1; }
message CancelEventReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 1;
    Error error = 100;
  }
}

message ProcessEventRequest {
  string source_name = 1;
  bytes event = 2;
}
message ProcessEventReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 1;
    Error error = 100;
  }
}

message ProcessQueryRequest {
  string source_name = 1;
  bytes request = 2;
}
message ProcessQueryReply {
  // This field is hoisted because protobuf3 does not support `repeated` within
  // a `oneof`. It is Always empty if an error is returned
  repeated bytes replies = 1;
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 10;
    Error error = 100;
  }
}

message TryReadEventsRequest { string sink_name = 1; }
message TryReadEventsReply {
  // This field is hoisted because protobuf3 does not support `repeated` within
  // a `oneof`. It is Always empty if an error is returned
  repeated bytes events = 1;
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 10;
    Error error = 100;
  }
}

message ReadEventRequest {
  string sink_name = 1;
  google.protobuf.Duration timeout = 2;
}
message ReadEventReply {
  oneof result { // Always returns exactly 1 variant.
    bytes event = 1;
    Error error = 100;
  }
}

message OpenSinkRequest { string sink_name = 1; }
message OpenSinkReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 10;
    Error error = 100;
  }
}

message CloseSinkRequest { string sink_name = 1; }
message CloseSinkReply {
  oneof result { // Always returns exactly 1 variant.
    google.protobuf.Empty empty = 10;
    Error error = 100;
  }
}

// A convenience message type for custom transport implementation.
message AnyRequest {
  oneof request { // Expects exactly 1 variant.
    InitRequest init_request = 1;
    HaltRequest halt_request = 2;
    TerminateRequest terminate_request = 3;
    SaveRequest save_request = 4;
    RestoreRequest restore_request = 5;
    TimeRequest time_request = 6;
    StepRequest step_request = 7;
    StepUntilRequest step_until_request = 8;
    StepUnbounded step_unbounded_request = 9;
    ListEventSources list_event_sources = 10;
    GetEventSourceSchemas get_event_source_schemas = 11;
    ListQuerySources list_query_sources = 12;
    GetQuerySourceSchemas get_query_source_schemas = 13;
    ListEventSinks list_event_sinks = 14;
    GetEventSinkSchemas get_event_sink_schemas = 15;
    ScheduleEventRequest schedule_event_request = 16;
    CancelEventRequest cancel_event_request = 17;
    ProcessEventRequest process_event_request = 18;
    ProcessQueryRequest process_query_request = 19;
    TryReadEventsRequest try_read_events_request = 20;
    ReadEventRequest read_event_request = 21;
    OpenSinkRequest open_sink_request = 22;
    CloseSinkRequest close_sink_request = 23;
  }
}

service Simulation {
  rpc Init(InitRequest) returns (InitReply);
  rpc Halt(HaltRequest) returns (HaltReply);
  rpc Terminate(TerminateRequest) returns (TerminateReply);
  rpc Save(SaveRequest) returns (SaveReply);
  rpc Restore(RestoreRequest) returns (RestoreReply);
  rpc Time(TimeRequest) returns (TimeReply);
  rpc Step(StepRequest) returns (StepReply);
  rpc StepUntil(StepUntilRequest) returns (StepUntilReply);
  rpc StepUnbounded(StepUnboundedRequest) returns (StepUnboundedReply);
  rpc ListEventSources(ListEventSourcesRequest) returns (ListEventSourcesReply);
  rpc GetEventSourceSchemas(GetEventSourceSchemasRequest) returns (GetEventSourceSchemasReply);
  rpc ListQuerySources(ListQuerySourcesRequest) returns (ListQuerySourcesReply);
  rpc GetQuerySourceSchemas(GetQuerySourceSchemasRequest) returns (GetQuerySourceSchemasReply);
  rpc ListEventSinks(ListEventSinksRequest) returns (ListEventSinksReply);
  rpc GetEventSinkSchemas(GetEventSinkSchemasRequest) returns (GetEventSinkSchemasReply);
  rpc ScheduleEvent(ScheduleEventRequest) returns (ScheduleEventReply);
  rpc CancelEvent(CancelEventRequest) returns (CancelEventReply);
  rpc ProcessEvent(ProcessEventRequest) returns (ProcessEventReply);
  rpc ProcessQuery(ProcessQueryRequest) returns (ProcessQueryReply);
  rpc TryReadEvents(TryReadEventsRequest) returns (TryReadEventsReply);
  rpc ReadEvent(ReadEventRequest) returns (ReadEventReply);
  rpc OpenSink(OpenSinkRequest) returns (OpenSinkReply);
  rpc CloseSink(CloseSinkRequest) returns (CloseSinkReply);
}
